# ECGiga

./: .gitignore  Dockerfile  LICENSE  MERGE_RESOLUTION.md  Plano Robustíssimo de Desenvolvimento do Projeto ECGiga.docx  Plano_docx_strings.txt  README.md  README_OLD.md  README_ORIGINAL.md  REVERT.md  REVERT_COMMIT_LOG.txt  REVERT_LOG.md  STEPS.docx  VERSION  Video 29516e4c3d298043b0f7e09ac4985be4.md  codecov.yml  conftest.py  docker-compose.yml  index.html  ll.txt  mcp_server.py  pyproject.toml  readme.me  render.yaml  requirements.txt  script.js  styles.css
.claude/: launch.json
.github/: WORKFLOW_USAGE.md  copilot-instructions.md
ECG_Curso_Megaprojeto_p16_append/: .gitignore  Dockerfile  GEMINI.md  Procfile  README.md  render.yaml  requirements.txt
agents/: __init__.py  multi_agent.py
ai/: interpreter.py  offline_rules.py  prompts.py  tutor.py
api/: __init__.py  dependencies.py  main.py
case_player/: __init__.py  generator.py  player.html  scorer.py
cv/: axis.py  axis_hexaxial.py  grid_detect.py  intervals.py  intervals_refined.py  lvh_checklist.py  normalize.py  overlay.py  precordial_transition.py  rhythm.py  robust_outliers.py  rpeaks_from_image.py  rpeaks_robust.py  segmentation.py  segmentation_ext.py  trace.py
datasets/: physionet.py  ptbxl.py
docs/: api_reference.md  arquitetura.md  cli_reference.md  clinical_guide_pt.md  dados_fontes.md  dev_analyze.md  dev_ingest.md  dev_p10_axishex_export_embed_validate.md  dev_p11_rhythm_transition_lvh.md  dev_p6_layout_rpeaks.md  dev_p7_rpeaks_intervals_quiz.md  dev_p8_intervals_axis_quiz.md  developer_guide.md  p2_changelog.md  p3_changelog.md  p3b_assets.md  p3c_assets_pipeline.md  p5_changelog.md  quiz_guide.md  roadmap.md  syllabus.md  unverified_assets.md  user_guide_pt.md
education/: __init__.py  cameras.py  didactic_electrolytes.py  didactic_text.py  electrophysiology.py  interactive.py
extracted_conflicts/: README.md
llm/: __init__.py  orchestrator.py  prompts.py
mega/: __init__.py  cli.py  config.py  deploy.py  ingest.py
notebooks/: 00_seed.ipynb  01_Introducao_ECG.ipynb  01_seed.ipynb  02_Anatomia_Eletrica.ipynb  02_seed.ipynb  03_Papel_das_Derivacoes.ipynb  04_Onda_P.ipynb  05_Intervalo_PR.ipynb  06_Complexo_QRS.ipynb  07_Ondas_Isoelectricas.ipynb  08_Ondas_Q_Patologicas.ipynb  09_Segmento_ST.ipynb  10_Onda_T.ipynb  11_Eixo_I_aVF_vetor.ipynb  11_Intervalo_QT.ipynb  12_Bloqueios_de_Ramo_e_Divisoes.ipynb  12_Rpeaks_e_RR.ipynb  13_Ions_e_STT_demo.ipynb  13_Sindrome_Coronariana_Aguda.ipynb  14_Artefatos_e_Filtros.ipynb  14_Infarto_Miocardio_STEMI.ipynb  (+17 more)
(+505 files in other folders)
