[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ecgcourse"
version = "0.0.0"
description = "Megaprojeto ECG — curso interativo (CLI/Web/IA) para médicos"
authors = [{name="ECG Megaprojeto", email="dev@example.com"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
select = ["E","F","I"]
