[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ecgcourse"
version = "0.1.0"
description = "Megaprojeto ECG — curso interativo (CLI/Web/IA) para médicos"
authors = [{name="ECG Megaprojeto", email="dev@example.com"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
ecgcourse = "cli_app.ecgcourse.cli:app"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E","F","I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
