[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ecgcourse"
version = "0.1.0"
description = "Megaprojeto ECG — curso interativo (CLI/Web/IA) para médicos"
authors = [{name="ECG Megaprojeto", email="dev@example.com"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.12.2",
    "dash>=2.17",
    "fastapi>=0.110",
    "jsonschema>=4.23",
    "lxml>=4.9.3",
    "matplotlib>=3.8",
    "neurokit2>=0.2.9",
    "numpy>=1.26",
    "opencv-python-headless>=4.10",
    "pandas>=2.2",
    "pillow>=10.2",
    "plotly>=5.22",
    "pydantic>=2.7",
    "pytesseract>=0.3.10",
    "pyyaml>=6.0",
    "rapidfuzz>=3.6.1",
    "requests>=2.32",
    "rich>=13.7",
    "scipy>=1.11",
    "toml>=0.10",
    "typer>=0.12",
    "uvicorn>=0.27",
    "wfdb>=4.1.2",
]

[tool.setuptools.packages.find]
include = ["cli_app*", "cv*", "reporting*", "web_app*"]

[project.scripts]
ecgcourse = "cli_app.ecgcourse.cli:app"
mega = "mega.cli:app"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E","F","I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
